Fix CSS on mobile

--- a/client/css/_mix.scss
+++ b/client/css/_mix.scss
@@ -11,6 +11,14 @@ header.main-header {
     padding-right: 1em;
     border: none;
     float: right;
+
+    @media screen and (max-width: 660px) {
+      float: none;
+      display: block;
+      margin: auto;
+      margin-top: 1em;
+      padding: 0.5em 1em;
+    }
   }
 }
 
